restapi - getfilerecord
