# ichain/server/api/controllers/iras/router.js
@@ -4,3 +4,6 @@ import controller from './controller';
 export default express
   .Router()
   .post('/addFile', controller.addFile)
+  .post('/getFileRecord:fileHash', controller.getFileRecordHash)
+  .post('/getFileRecord:fileName', controller.getFileRecordName)
+
